[gd_scene load_steps=4 format=3 uid="uid://jv66pco7nh2x"]

[ext_resource type="Texture2D" uid="uid://c3lxttphkgl5g" path="res://assets/BackGrounds/StartScrene.png" id="2_u5ucp"]
[ext_resource type="Script" path="res://BacktoHome.gd" id="2_uam63"]

[sub_resource type="Theme" id="Theme_lu5b6"]

[node name="FirstGame" type="Node2D"]

[node name="BacktoHome" type="Button" parent="."]
offset_left = 49.0
offset_top = 23.0
offset_right = 324.0
offset_bottom = 124.0
theme = SubResource("Theme_lu5b6")
theme_override_font_sizes/font_size = 34
text = "Return to start"
script = ExtResource("2_uam63")

[node name="Play" type="Button" parent="."]
offset_left = 349.0
offset_top = 30.0
offset_right = 724.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 34
text = "PLAY level 1"

[node name="Inventory" type="Button" parent="."]
offset_left = 341.0
offset_top = 291.0
offset_right = 581.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 34
text = "Inventory"

[node name="LevelMenu" type="Button" parent="."]
offset_left = 332.0
offset_top = 454.0
offset_right = 578.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 34
text = "Level Menu"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_top = -5.0
offset_right = 1165.0
offset_bottom = 648.0
mouse_filter = 2
texture = ExtResource("2_u5ucp")
expand_mode = 1

[node name="Debugging level buttons" type="Node2D" parent="."]
visible = false

[node name="Level 1" type="Button" parent="Debugging level buttons"]
offset_left = 861.0
offset_top = 177.0
offset_right = 1086.0
offset_bottom = 249.0
text = "Level 1: Floor 5"

[node name="Level 2" type="Button" parent="Debugging level buttons"]
offset_left = 855.0
offset_top = 268.0
offset_right = 1090.0
offset_bottom = 340.0
text = "Level 2: Floor 4"

[node name="Level 3" type="Button" parent="Debugging level buttons"]
offset_left = 850.0
offset_top = 365.0
offset_right = 1091.0
offset_bottom = 434.0
text = "Level 3: Floor 2"

[node name="Level 5" type="Button" parent="Debugging level buttons"]
offset_left = 848.0
offset_top = 471.0
offset_right = 1099.0
offset_bottom = 548.0
text = "Level 5: Floor 1"

[node name="TestNoBg" type="Button" parent="Debugging level buttons"]
offset_left = 865.0
offset_top = 81.0
offset_right = 1085.0
offset_bottom = 151.0
text = "Demo (no background)"

[connection signal="button_down" from="BacktoHome" to="BacktoHome" method="_on_button_down"]
[connection signal="button_down" from="Play" to="BacktoHome" method="_on_play_button_down"]
[connection signal="button_down" from="Inventory" to="BacktoHome" method="_on_inventory_button_down"]
[connection signal="button_down" from="LevelMenu" to="BacktoHome" method="_on_level_menu_button_down"]
[connection signal="button_down" from="Debugging level buttons/Level 1" to="BacktoHome" method="_on_level_1_button_down"]
[connection signal="button_down" from="Debugging level buttons/Level 2" to="BacktoHome" method="_on_level_2_button_down"]
[connection signal="button_down" from="Debugging level buttons/Level 3" to="BacktoHome" method="_on_level_3_button_down"]
[connection signal="button_down" from="Debugging level buttons/Level 5" to="BacktoHome" method="_on_level_5_button_down"]
[connection signal="button_down" from="Debugging level buttons/TestNoBg" to="BacktoHome" method="_on_test_no_bg_button_down"]
